syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.library";

import "stremio/core/types/meta_item.proto";
import "stremio/core/types/deep_links.proto";

message LibraryItem {
  required string id = 1;
  required string type = 2;
  required string name = 3;
  optional string poster = 4;
  required PosterShape poster_shape = 5;
  required LibraryItemState state = 6;
  required MetaItemBehaviorHints behavior_hints = 7;
  required LibraryItemDeepLinks deep_links = 8;
  required double progress = 9;
  required bool watched = 10;
  required uint64 notifications = 11;
}

message LibraryItemState {
  required uint64 time_offset = 1;
  required uint64 duration = 2;
  optional string video_id = 3;
  required bool no_notif = 4;
}
